unpackaged/main/default/objects/Activity/fields/Comments_notes__c.field-meta.xml
<CustomField>
    <fullName>Comments_notes__c</fullName>
    <inlineHelpText>Brief summary of the call - attach notes / minutes on related tab</inlineHelpText>
    <label>Comments / notes</label>
    <type>TextArea</type>
</CustomField>