unpackaged/main/default/objects/Activity/fields/Next_step_due_date__c.field-meta.xml
<CustomField>
    <fullName>Next_step_due_date__c</fullName>
    <label>Next step due date</label>
    <type>Date</type>
</CustomField>