unpackaged/main/default/objects/Activity/fields/Original_date__c.field-meta.xml
<CustomField>
    <fullName>Original_date__c</fullName>
    <description>What was the original activity date?</description>
    <label>Original date</label>
    <type>Date</type>
</CustomField>