unpackaged/main/default/objects/Activity/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <label>Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monica Mackintosh</fullName>
            </value>
            <value>
                <fullName>Andy Mack</fullName>
            </value>
            <value>
                <fullName>Mark Alfer</fullName>
            </value>
            <value>
                <fullName>Richard Harvey</fullName>
            </value>
            <value>
                <fullName>Ellen Lavender</fullName>
            </value>
            <value>
                <fullName>Jim White</fullName>
            </value>
            <value>
                <fullName>Vicki Dixon</fullName>
            </value>
            <value>
                <fullName>Lloyd Birkhead</fullName>
            </value>
            <value>
                <fullName>Nathan Barton</fullName>
            </value>
            <value>
                <fullName>Caroline Boden</fullName>
            </value>
            <value>
                <fullName>Natasha Porter</fullName>
            </value>
            <value>
                <fullName>Neil Priestly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>