unpackaged/main/default/objects/Activity/fields/Rescheduled__c.field-meta.xml
<CustomField>
    <fullName>Rescheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has this activity been rescheduled</description>
    <label>Rescheduled?</label>
    <type>Checkbox</type>
</CustomField>